# alltheplaces-rust

./: .env  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  docker-compose.yml  init.sql
.github/: pull_request_template.md
.github/workflows/: cicd.yaml
backend/: Cargo.toml  Dockerfile
backend/src/: brand.rs  main.rs  model.rs  poi.rs
ingestion/: Cargo.toml  Dockerfile
ingestion/src/: db.rs  download.rs  files.rs  main.rs  model.rs  poi.rs  unzip.rs
migrations/brand/: init.sql
migrations/poi/: init.sql
src/: db.rs  download.rs  files.rs  main.rs  model.rs  poi.rs  unzip.rs
