[package]
name = "alltheplaces"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.1"
dotenv = "0.15.0"
error-chain = "0.12.4"
geojson = "0.24.2"
postgres = "0.19.10"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["blocking"] }
rustls = "0.23.23"
serde = "1.0.218"
serde_json = "1.0.140"
url = "2.5.4"
walkdir = "2.5.0"
zip = "2.2.3"
zip-extensions = "0.8.1"
