[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-web = "4.10.2"
dotenv = "0.15.0"
geo = "0.29.3"
geo-types = "0.7.15"
geozero = { version = "0.14.0", features = ["with-postgis-sqlx"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.0", features = [
    "postgres",
    "runtime-async-std-native-tls",
] }
